web/src/app/components/Editor/components/editor.css
.editor {
  width: 80%;
  float: right;
  margin: 20px 5px;
}

.editor .editor-blockquote {
  border-left: 5px solid #eee;
  color: #666;
  font-style: italic;
  margin: 16px 0;
  padding: 10px 20px;
}

.editor .public-DraftStyleDefault-pre {
  background-color: rgba(0, 0, 0, 0.05);
  font-size: 16px;
  padding: 20px;
}

.editor h1 {
  font-size: 26px;
}

@media (min-width: 576px) {
  .editor {
    margin: 30px 20px;
  }
}

@media (min-width: 768px) {
  .editor {
    margin: 40px;
  }
}

@media (min-width: 992px) {
  .editor {
    margin: 50px 100px;
  }
}

@media (min-width: 1600px) {
  .editor {
    margin: 50px 150px;
  }
}

